# Neutrone

./: .gitignore  README.md  pyproject.toml
scripts/: generate_dataset.py  generate_drone_dataset.sh  play_dat_rpm.py  quickstart_ai.sh  train_drone_tracker.py  view_dataset.py  visualize_tracking.py
scripts/backups/: demo_tracking.sh  play_dat_angle copy.py  play_dat_angle.py  predict_angles.py  train_angle_model.py
scripts/debug/: check_dataset.py  test_propeller_detection.py  visualize_activity.py
src/evio/source/: drone_idle_predictions.json  drone_moving_predictions.json
