[project]
name = "NEUTRONE"
version = "1.0.0"
description = "NEUTRONE - Propeller RPM Detection, Drone Dataset Generation, Drone Detection & Tracking from Event Camera Data"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "Yass", email = "yacineoubyi@gmail.com" },
    { name = "Ahti Helminen", email = "ahti@helminen.dev" }
]
keywords = ["event-camera", "DVS", "neuromorphic", "drone-tracking", "propeller-detection", "angle-estimation", "AI", "computer-vision"]
classifiers = [
"Programming Language :: Python :: 3",
"License :: OSI Approved :: MIT License",
"Topic :: Scientific/Engineering :: Image Processing",
"Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "numpy>=1.24",
    "opencv-python>=4.11.0.86",
    "scipy>=1.15.3",
    "torch>=2.0.0",
    "matplotlib>=3.7.0",
]

[project.optional-dependencies]
dev = [
"pytest>=8",
"pytest-timeout>=2.3.1",
"ruff>=0.6",
"types-setuptools",
]

[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/evio"]

[tool.uv]
default-groups = []

[tool.mypy]
python_version = "3.10"
strict = true
warn_unused_ignores = true
warn_redundant_casts = true
mypy_path = "src"

[tool.ruff]
line-length = 80
target-version = "py312"

[tool.ruff.lint]
select = [
	"A",    # builtins
	"ANN",  # type annotations
	"B",    # bugbear
	"BLE",  # blind exception
	"C4",   # comprehensions
	"COM",  # commas
	"E",    # pycodestyle
	"EM",   # errormessage
	"EXE",  # executable
	"F",    # pyflakes
	"FURB", # refurb
	"I",    # isort
	"ICN",  # import-conventions
	"INP",  # implicit-namespace-package
	"NPY",  # numpy
	"PERF", # perflint
	"PIE",  # misc dict stuff
	"PTH",  # pathlib
	"RET",  # return
	"RUF",  # ruff
	"SIM",  # simplify
	"T10",  # debugger
	"TRY",  # tryceratops
	"UP",   # pyupgrade
]
ignore = [
	"COM812",
]
